--- a/public/register.html
+++ b/public/register.html
@@ -35,7 +35,7 @@
       </ul>
 
       <form id="form-register">
-        <input type="text" name="name" placeholder="Nome" required />
+        <input type="text" name="name" placeholder="Nome da Empresa" required />
         <input type="email" name="email" placeholder="E-mail" required />
         <input type="password" name="password" placeholder="Senha" required />
 
