--- a/public/index.html
+++ b/public/index.html
@@ -21,20 +21,13 @@
             alt="Logo Icone"
             id="logo-icon"
           />
-          <img
-            src="assets/images/logo-text-blue.svg"
-            alt="Logo Texto"
-            id="logo-text"
-          />
         </a>
-        <small id="userName"></small>
-        <div id="userMenu"></div>
-        <img src="./assets/images/user.svg" alt="Avatar" id="avatar" />
       </header>
 
       <main id="burguer">
-        <header>
+        <header id="company">
           <h1>Monte o seu <span>Oburger</span></h1>
+          <span>O melhor burger da cidade!</span>
         </header>
         <section>
           <div class="category">
