--- a/public/product.html
+++ b/public/product.html
@@ -37,8 +37,8 @@
 
     <main>
       <ul id="form-tabs">
-        <li class="active"><a href="updateBusiness.html">Empresa</a></li>
-        <li></li>
+        <li class="active"><a href="products.html">Produtos</a></li>
+        <li ></li>
       </ul>
       <form id="form-update">
         <h3>Logotipo da Empresa</h3>
