--- a/public/products.html
+++ b/public/products.html
@@ -38,9 +38,10 @@
 
       <main>
         <header>
-          <h1>Meus Pedidos</h1>
+          <h1>Meus Produtos</h1>
+          <a href="./product.html">+ produto</a>
         </header>
-        <ul id="list-orders">
+        <ul id="list-products">
           <p>Carregando...</p>
         </ul>
       </main>
