--- a/public/products.html
+++ b/public/products.html
@@ -39,7 +39,7 @@
       <main>
         <header>
           <h1>Meus Produtos</h1>
-          <a href="./product.html">+ produto</a>
+          <button id="new-product">+ produto</button>
         </header>
         <ul id="list-products">
           <p>Carregando...</p>
