--- a/public/updateBusiness.html
+++ b/public/updateBusiness.html
@@ -41,6 +41,7 @@
         <li></li>
       </ul>
       <form id="form-update">
+        <a id="link-shop"></a>
         <h3>Logotipo da Empresa</h3>
         <div>
           <img src="assets/images/user.svg" alt="photo" id="photo-preview" style="max-width: 300px; max-height: 300px" />
