--- a/public/product.html
+++ b/public/product.html
@@ -37,43 +37,26 @@
 
     <main>
       <ul id="form-tabs">
-        <li class="active"><a href="products.html">Produtos</a></li>
-        <li ></li>
+        <li class="active">Editar</li>
+        <li ><a href="products.html">Voltar</a></li>
       </ul>
-      <form id="form-update">
-        <h3>Logotipo da Empresa</h3>
+      <form id="form-product">
+        <h3>Foto do Produto</h3>
         <div>
-          <img src="assets/images/user.svg" alt="photo" id="photo-preview" style="max-width: 300px; max-height: 300px" />
+          <img src="assets/images/user.svg" alt="photo" id="photo-preview" />
           <input type="file" name="photo" id="file" />
   
           <button type="button" class="choose-photo">Alterar Logotipo</button>
         </div>
         
-        <h3>Edite os dados da Empresa</h3>
-        <label for="name">Nome da Empresa</label>
-        <input type="text" name="name" placeholder="Nome da Empresa" required />
-        <label for="category">Categoria da Empresa</label>
-        <input type="text" name="category" placeholder="Categoria da Empresa" />
-        <label for="email">E-mail</label>
-        <input type="email" name="email" placeholder="E-mail" required />
-        <label for="phone">WhatsApp Comercial</label>
-        <input type="tel" name="phone" placeholder="WhatsApp Comercial" required />
-        <label for="message">Slogam</label>
-        <input type="text" name="message" placeholder="Slogam" />
-        <label for="rash">Link único da empresa</label>
-        <input type="text" name="rash" placeholder="Link único da empresa" />
-
-        <h3>Endereço da Empresa</h3>
-        <label for="adress">Rua</label>
-        <input type="text" name="adress" placeholder="Rua" />
-        <label for="number">Número</label>
-        <input type="number" name="number" placeholder="Número" />
-        <label for="district">Bairro</label>
-        <input type="text" name="district" placeholder="Bairro" />
-        <label for="city">Cidade</label>
-        <input type="text" name="city" placeholder="Cidade" />
-        <label for="cep">CEP</label>
-        <input type="text" name="cep" placeholder="CEP" />
+        <label for="name">Nome do Produto</label>
+        <input type="text" name="name" placeholder="Nome do Produto" required />
+        <label for="category">Categoria da Produto</label>
+        <input type="text" name="category" placeholder="Categoria da Produto" />
+        <label for="price">Valor do Produto</label>
+        <input type="text" name="price" placeholder="Valor do Produto" required />
+        <label for="description">Descrição</label>
+        <input type="text" name="description" placeholder="Descrição" />
 
         <footer>
           <button type="submit">Atualizar</button>
