--- a/public/index.html
+++ b/public/index.html
@@ -24,37 +24,15 @@
         </a>
       </header>
 
-      <main id="burguer">
+      <main id="shop">
         <header id="company">
           <h1>Monte o seu <span>Oburger</span></h1>
           <span>O melhor burger da cidade!</span>
         </header>
         <section>
           <div class="category">
-            <h2>Escolha o pão <small>(escolha apenas um)</small></h2>
-            <ul id="breads">
-              <!-- <li>
-                <label>
-                  <input type="radio" name="item" />
-                  <span></span>
-                  <h3>Pão de Batata</h3>
-                  <div>R$ 2,50</div>
-                </label>
-              </li> -->
-            </ul>
-          </div>
-          <div class="category">
-            <h2>Ingredientes</h2>
-            <ul id="ingredients">
-              <!-- <li>
-                <label>
-                  <input type="checkbox" name="item" />
-                  <span></span>
-                  <h3>Carne Bovina 125g</h3>
-                  <div>R$ 3,00</div>
-                </label>
-              </li>               -->
-            </ul>
+            <h2>Escolha o seu...</h2>
+            <ul id="products"></ul>
           </div>
         </section>
       </main>
@@ -89,7 +67,7 @@
         <strong>Bandeja<small></small></strong>
       </header>
       <section>
-        <ul id="orderList">
+        <ul id="list">
           <!-- <li>
             <div>Hamburguer 2</div>
             <div>R$ 15,00</div>
