--- a/public/updateBusiness.html
+++ b/public/updateBusiness.html
@@ -27,7 +27,7 @@
           id="logo-text"
         />
       </a>
-      <div id="menu">
+      <div id="menu-admin">
         <small id="userName"></small>
         <div id="userMenu"></div>
         <img src="./assets/images/user.svg" alt="Avatar" id="avatar" />
