--- a/public/product.html
+++ b/public/product.html
@@ -59,12 +59,12 @@
         <label for="description">Descrição</label>
         <input type="text" name="description" placeholder="Descrição" />
         
-        <div id="form-categories">
+        <!-- <div id="form-categories">
           <h3>Opções</h3>
           <label for="adicionais">Adicionais</label>
           <input type="text" name="adicionais" data-category="" />
 
-        </div>
+        </div> -->
 
         <footer>
           <button type="submit">Atualizar</button>
