--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     />
   </head>
   <body id="app" class="loading">
+    <div id="modal"></div>
     <div id="loading">
       <span>tahChegando...</span>
     </div>
@@ -87,8 +88,8 @@
         <strong>Bandeja<small></small></strong>
       </header>
       <section>
-        <ul id="list">
-          <!-- <li>
+        <ul id="orderList">
+          <li>
             <div>Hamburguer 2</div>
             <div>R$ 15,00</div>
             <button type="button" aria-label="Remover Hamburguer 2">
@@ -105,7 +106,7 @@
                 />
               </svg>
             </button>
-          </li> -->
+          </li>
         </ul>
       </section>
       <footer>
