--- a/public/updateBusiness.html
+++ b/public/updateBusiness.html
@@ -61,8 +61,8 @@
       <input type="tel" name="phone" placeholder="WhatsApp Comercial" required />
       <label for="message">Slogam</label>
       <input type="text" name="message" placeholder="Slogam" />
-      <label for="rash">Link único da empresa</label>
-      <input type="text" name="rash" placeholder="Link único da empresa" />
+      <label for="hash">Link único da empresa</label>
+      <input type="text" name="hash" placeholder="Link único da empresa" />
 
       <h3>Endereço da Empresa</h3>
       <label for="adress">Rua</label>
