--- a/public/index.html
+++ b/public/index.html
@@ -88,26 +88,7 @@
         <strong>Bandeja<small></small></strong>
       </header>
       <section>
-        <ul id="orderList">
-          <li>
-            <div>Hamburguer 2</div>
-            <div>R$ 15,00</div>
-            <button type="button" aria-label="Remover Hamburguer 2">
-              <svg
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M6 19C6 20.1 6.9 21 8 21H16C17.1 21 18 20.1 18 19V7H6V19ZM19 4H15.5L14.5 3H9.5L8.5 4H5V6H19V4Z"
-                  fill="black"
-                />
-              </svg>
-            </button>
-          </li>
-        </ul>
+        <ul id="orderList"></ul>
       </section>
       <footer>
         <div class="close">
