--- a/public/index.html
+++ b/public/index.html
@@ -109,7 +109,7 @@
 
         <div class="price"><small>Subtotal</small><span>R$ 0,00</span></div>
 
-        <button type="button" aria-label="Pagar" id="btn-pay">
+        <button type="button" aria-label="Finalizar" id="btn-pay">
           <svg
             width="24"
             height="24"
@@ -122,7 +122,7 @@
               fill="white"
             />
           </svg>
-          Pagar
+          Finalizar
         </button>
       </footer>
     </aside>
