--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <body id="app" class="loading">
     <div id="modal"></div>
     <div id="loading">
-      <span>tahChegando...</span>
+      <span>🆃🅰🅲🅷🅴🅶🅰🅽🅳🅾...</span>
     </div>
     <section>
       <header >
