--- a/public/pay.html
+++ b/public/pay.html
@@ -16,6 +16,7 @@
     <div id="modal"></div>
     <section id="payment" class="page">
       <header >
+        <a class="second" href="javascript:history.back()">⮪</a>
         <div id="company">
           <h1>Dados para entrega</h1>
         </div>
