--- a/public/product.html
+++ b/public/product.html
@@ -13,13 +13,9 @@
 
 <body id="admin" class="auth">
   <div id="modal"></div>
-  <header>
-    <a href="index.html">
-      <img src="assets/images/logo-icon-blue.svg" alt="Logo Icone" id="logo-icon" />
-      <img src="assets/images/logo-text-blue.svg" alt="Logo Texto" id="logo-text" />
-    </a>
+  <header>    
+    <span>🆃🅰🅲🅷🅴🅶🅰🅽🅳🅾</span>
     <div id="menu-admin">
-      <small id="userName"></small>
       <div id="userMenu"></div>
       <img src="./assets/images/user.svg" alt="Avatar" id="avatar" />
       <nav></nav>
@@ -31,7 +27,7 @@
       <li class="active">Editar</li>
       <li><a href="products.html">Voltar</a></li>
     </ul>
-    <form id="form-product">
+    <form class="second" id="form-product">
       <h3>Foto do Produto</h3>
       <div>
         <img src="assets/images/user.svg" alt="photo" id="photo-preview" />
