--- a/public/products.html
+++ b/public/products.html
@@ -16,18 +16,7 @@
     <div id="modal"></div>
     <section>
       <header>
-        <a href="index.html">
-          <img
-            src="assets/images/logo-icon-blue.svg"
-            alt="Logo Icone"
-            id="logo-icon"
-          />
-          <img
-            src="assets/images/logo-text-blue.svg"
-            alt="Logo Texto"
-            id="logo-text"
-          />
-        </a>
+        <span>🆃🅰🅲🅷🅴🅶🅰🅽🅳🅾</span>
         <div id="menu-admin">
           <small id="userName"></small>
           <div id="userMenu"></div>
