ajustes quase finais

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <body id="app" class="loading">
     <div id="modal"></div>
     <div id="loading">
-      <span>🆃🅰🅲🅷🅴🅶🅰🅽🅳🅾...</span>
+      <span>🆃🅰🅲🅷🅴🅶🅰🅽🅳🅾</span>
     </div>
     <section>
       <header >
@@ -109,7 +109,7 @@
 
         <div class="price"><small>Subtotal</small><span>R$ 0,00</span></div>
 
-        <button type="button" aria-label="Finalizar" id="btn-pay">
+        <button type="button" class="second" aria-label="Finalizar" id="btn-pay">
           <svg
             width="24"
             height="24"
