--- a/public/pay.html
+++ b/public/pay.html
@@ -16,7 +16,9 @@
     <div id="modal"></div>
     <section id="payment" class="page">
       <header >
-        <a class="second" href="javascript:history.back()">⮪</a>
+        <a class="second" href="javascript:history.back()">
+          <img class="undo" src="assets/images/undo.svg" alt="Voltar" />
+        </a>
         <div id="company">
           <h1>Dados para entrega</h1>
         </div>
