--- a/public/updateBusiness.html
+++ b/public/updateBusiness.html
@@ -27,6 +27,7 @@
       <li><a href="products.html">Voltar</a></li>
     </ul>
     <form id="form-update" class="main-color">
+      <h3>Link do App da Empresa</h3>
       <a id="link-shop"></a>
       <h3>Logotipo da Empresa</h3>
       <div>
@@ -36,7 +37,7 @@
         <button type="button" class="choose-photo second">Alterar Logotipo</button>
         <br/>
       </div>
-
+      <h3>Escolha as cores do App</h3>
       <div>
         <input type="color" id="main-color" name="main_color" value="#e66465">
         <label for="main-color">Fundo da página</label>
