--- a/public/pay.html
+++ b/public/pay.html
@@ -35,6 +35,7 @@
             <input type="text" name="complement" placeholder="Complemento (não obrigatório)" />
             <input type="text" name="district" placeholder="Bairro" required/>
             <input type="text" name="city" placeholder="Cidade" required/>
+            <input type="text" name="UF" placeholder="Estado" required/>
 
             <button type="submit" style="display: none">Send</button>
           </form>
