--- a/public/reset.html
+++ b/public/reset.html
@@ -14,18 +14,7 @@
   </head>
   <body id="auth" class="auth">
     <header>
-      <a href="index.html">
-        <img
-          src="assets/images/logo-icon-blue.svg"
-          alt="Logo Icone"
-          id="logo-icon"
-        />
-        <img
-          src="assets/images/logo-text-blue.svg"
-          alt="Logo Texto"
-          id="logo-text"
-        />
-      </a>
+      <span>🆃🅰🅲🅷🅴🅶🅰🅽🅳🅾</span>
     </header>
 
     <main>
