--- a/public/product.html
+++ b/public/product.html
@@ -4,11 +4,28 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Projeto Hburger do Hcode Lab" />
-  <title>Cadastro - OBurguer</title>
+  <meta name="description" content="Projeto tahChegando para o Hcode Lab" />
+  <title>Cadastro - tahChegando</title>
   <link rel="stylesheet" href="assets/css/main.css" />
   <link rel="stylesheet" href="assets/css/cropper.min.css" />
-  <link rel="shortcut icon" href="assets/images/logo-favicon-blue.svg" type="image/x-icon" />
+  <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="apple-touch-icon" sizes="57x57" href="assets/images/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="assets/images/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="assets/images/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/images/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="assets/images/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="assets/images/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="assets/images/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/images/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="assets/images/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/images/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="assets/images/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#9c9c9c5b">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#9c9c9c5b">
 </head>
 
 <body id="admin" class="auth">
@@ -33,7 +50,7 @@
         <img src="assets/images/user.svg" alt="photo" id="photo-preview" />
         <input type="file" name="photo" id="file" />
 
-        <button type="button" class="choose-photo">Alterar Logotipo</button>
+        <button type="button" class="choose-photo">Alterar Foto</button>
       </div>
       <h4 for="is_online">Produto Online?</h4>
       <!-- <input type="checkbox" name="is_online" value="1" /> -->
@@ -43,7 +60,7 @@
       </label>
       <label for="name">Nome do Produto</label>
       <input type="text" name="name" placeholder="Nome do Produto" required />
-      <label for="category">Categoria da Produto</label>
+      <label for="category">Categoria do Produto</label>
       <input type="text" name="category" placeholder="Categoria da Produto" />
       <label for="price">Valor do Produto</label>
       <input type="text" name="price" placeholder="Valor do Produto" required />
