--- a/public/product.html
+++ b/public/product.html
@@ -46,7 +46,7 @@
     </ul>
     <form class="second" id="form-product">
       <h3>Foto do Produto</h3>
-      <div>
+      <div class="wrap-photo">
         <img src="assets/images/user.svg" alt="photo" id="photo-preview" />
         <input type="file" name="photo" id="file" />
 
@@ -65,7 +65,8 @@
       <label for="price">Valor do Produto</label>
       <input type="text" name="price" placeholder="Valor do Produto" required />
       <label for="description">Descrição</label>
-      <input type="text" name="description" placeholder="Descrição" />
+      <!-- <input type="text" name="description" placeholder="Descrição" /> -->
+      <textarea name="description" rows="3" cols="30"></textarea>
 
       <!-- <div id="form-categories">
           
