--- a/public/pay.html
+++ b/public/pay.html
@@ -57,7 +57,7 @@
             <div id="adress"></div>
             
             <br />
-            <h3>Método de Pagamento</h3>
+            <h3 id="payment-title">Método de Pagamento</h3>
             <div class="row ali-center hide">
               <input type="radio" id="card" name="payments" value="cartao">
               <label for="card">No Cartão</label>
