menu de categorias começado

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,8 @@
         </div>
       </header>
 
+      <nav id="menu-categories"></nav>
+
       <main id="shop">
         <!-- <header >
           <h1>Monte o seu <span>Oburger</span></h1>
