ajustes dani pediu

--- a/public/pay.html
+++ b/public/pay.html
@@ -64,7 +64,11 @@
                 <input type="radio" id="card" name="payments" value="cartao">
                 <label for="card">No Cartão</label>
               </div>
-              <p id="msg-card" class="hide">Ok! O motoboy vai levar a máquininha.</p>
+              <div id="msg-card" class="hide">
+                <span>Ok! O motoboy vai levar a máquininha.</span>
+                <small>Informe a bandeira do seu cartão.</small>
+                <ul id="cards"></ul>
+              </div>
   
               <div class="row ali-center hide">
                 <input type="radio" id="pix" name="payments" value="pix">
