--- a/public/updateBusiness.html
+++ b/public/updateBusiness.html
@@ -96,14 +96,107 @@
         </label>
         <label for="money" class="big">Dinheiro</label>
       </div>
-      <div class="row">
+      <div class="row ali-center">
         <label class="switch">
           <input type="checkbox" id="card" name="payments" value="cartao" >
           <span class="slider round"></span>
         </label>
         <label for="card" class="big">Cartões</label>
       </div>
-      <div class="row">
+
+      <div class="wrap-cards" style="display: none;">
+        <small>Escolha os cartões que sua empresa aceita:</small>
+        <div class="row ali-center">
+          <label class="switch">
+            <input type="checkbox" id="mastercard" name="cards" value="mastercard" >
+            <span class="slider round"></span>
+          </label>
+          <label for="mastercard" class="big"><img alt="mastercard" src="assets/images/cards/mastercard.svg"></label>
+        </div>
+
+        <div class="row ali-center">
+          <label class="switch">
+            <input type="checkbox" id="visa" name="cards" value="visa" >
+            <span class="slider round"></span>
+          </label>
+          <label for="visa" class="big"><img alt="visa" src="assets/images/cards/visa.svg"></label>
+        </div>
+
+        <div class="row ali-center">
+          <label class="switch">
+            <input type="checkbox" id="banricompras" name="cards" value="banricompras" >
+            <span class="slider round"></span>
+          </label>
+          <label for="banricompras" class="big"><img alt="banricompras" src="assets/images/cards/banricompras.svg"></label>
+        </div>
+
+        <div class="row ali-center">
+          <label class="switch">
+            <input type="checkbox" id="elo" name="cards" value="elo" >
+            <span class="slider round"></span>
+          </label>
+          <label for="elo" class="big"><img alt="elo" src="assets/images/cards/elo.svg"></label>
+        </div>
+
+        <div class="row ali-center">
+          <label class="switch">
+            <input type="checkbox" id="hipercard" name="cards" value="hipercard" >
+            <span class="slider round"></span>
+          </label>
+          <label for="hipercard" class="big"><img alt="hipercard" src="assets/images/cards/hipercard.svg"></label>
+        </div>
+
+        <div class="row ali-center">
+          <label class="switch">
+            <input type="checkbox" id="hiper" name="cards" value="hiper" >
+            <span class="slider round"></span>
+          </label>
+          <label for="hiper" class="big"><img alt="hiper" src="assets/images/cards/hiper.svg"></label>
+        </div>
+
+        <div class="row ali-center">
+          <label class="switch">
+            <input type="checkbox" id="cabal" name="cards" value="cabal" >
+            <span class="slider round"></span>
+          </label>
+          <label for="cabal" class="big"><img alt="cabal" src="assets/images/cards/cabal.svg"></label>
+        </div>
+
+        <div class="row ali-center">
+          <label class="switch">
+            <input type="checkbox" id="dinersclub" name="cards" value="dinersclub" >
+            <span class="slider round"></span>
+          </label>
+          <label for="dinersclub" class="big"><img alt="dinersclub" src="assets/images/cards/dinersclub.svg"></label>
+        </div>
+
+        <div class="row ali-center">
+          <label class="switch">
+            <input type="checkbox" id="americanexpress" name="cards" value="americanexpress" >
+            <span class="slider round"></span>
+          </label>
+          <label for="americanexpress" class="big"><img alt="americanexpress" src="assets/images/cards/americanexpress.svg"></label>
+        </div>
+
+        <div class="row ali-center">
+          <label class="switch">
+            <input type="checkbox" id="queroquero" name="cards" value="queroquero" >
+            <span class="slider round"></span>
+          </label>
+          <label for="queroquero" class="big"><img alt="queroquero" src="assets/images/cards/queroquero.svg"></label>
+        </div>
+
+        <div class="row ali-center">
+          <label class="switch">
+            <input type="checkbox" id="refeisul" name="cards" value="refeisul" >
+            <span class="slider round"></span>
+          </label>
+          <label for="refeisul" class="big"><img alt="refeisul" src="assets/images/cards/refeisul.svg"></label>
+        </div>
+        
+        <br />
+      </div>
+      <div class="row ali-center">
         <label class="switch">
           <input type="checkbox" id="pix" name="payments" value="pix" >
           <span class="slider round"></span>
@@ -111,9 +204,9 @@
         <label for="pix" class="big">Pix</label>
       </div>
 
-      <div class="wrap-pix">
+      <div class="wrap-pix" style="display: none;">
         <label for="pix-code">Chave Pix da Empresa</label>
-        <input type="text" id="pix-code"name="pix" placeholder="Chave Pix da Empresa" />
+        <input type="text" id="pix-code" name="pix" placeholder="Chave Pix da Empresa" />
       </div>
       
 
