--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Projeto tahChegando para o Hcode Lab" />
+    <meta name="description" content="tahChegando - um app pra facilitar o seu pedido." />
     <title>tahChegando App</title>
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="apple-touch-icon" sizes="57x57" href="assets/images/favicon/apple-icon-57x57.png">
