ajustes 21 de outubro 2021

--- a/public/product.html
+++ b/public/product.html
@@ -47,7 +47,7 @@
     <form class="second" id="form-product">
       <h3>Foto do Produto</h3>
       <div class="wrap-photo">
-        <img src="assets/images/user.svg" alt="photo" id="photo-preview" />
+        <img src="assets/images/product.svg" alt="photo" id="photo-preview" />
         <input type="file" name="photo" id="file" />
 
         <button type="button" class="choose-photo">Alterar Foto</button>
@@ -86,7 +86,7 @@
 
 
     <div id="options"></div>
-
+    
 
   </main>
 
