--- a/public/products.html
+++ b/public/products.html
@@ -38,14 +38,19 @@
         </div>  
       </header>
 
-      <main>
+      <nav id="menu-categories"></nav>
+
+      <main id="all-products">
         <header>
           <h1>Meus Produtos</h1>
-          <button id="new-product">+ produto</button>
+          
+            <button id="new-product">+ produto</button>
+            <div id="status"></div>
+          
         </header>
-        <ul id="list-products">
+        <div class="categories">
           <p>Carregando...</p>
-        </ul>
+        </div>
       </main>
     </section>
 
