--- a/public/categories.html
+++ b/public/categories.html
@@ -48,17 +48,8 @@
       <h3>Suas Categorias</h3>
       
       <ul class="sorteable-ul">
-        <li draggable="true" class="sortable-bulk">List Item 1</li>
-        <li draggable="true" class="sortable-bulk">List Item 2</li>
-        <li draggable="true" class="sortable-bulk">List Item 3</li>
-        <li draggable="true" class="sortable-bulk">List Item 4</li>
-        <li draggable="true" class="sortable-bulk">List Item 5</li>
-        <li draggable="true" class="sortable-bulk">List Item 6</li>
-        <li draggable="true" class="sortable-bulk">List Item 7</li>
-        <li draggable="true" class="sortable-bulk">List Item 8</li>
-        <li draggable="true" class="sortable-bulk">List Item 9</li>
-        <li draggable="true" class="sortable-bulk">List Item 10</li>
-    </ul>
+        <p>Carregando Categorias...</p>
+      </ul>
 
 
       <footer>
