--- a/public/products.html
+++ b/public/products.html
@@ -38,7 +38,7 @@
         </div>  
       </header>
 
-      <nav id="menu-categories"></nav>
+      <nav id="menu-categories" class="not-aside"></nav>
 
       <main id="all-products">
         <header>
